--- a/vignettes/HilbertCurve.Rmd
+++ b/vignettes/HilbertCurve.Rmd
@@ -810,7 +810,7 @@ df = read.table(pipe("awk '$1==\"chr1\"' ~/HilbertCurveTest/hg19_gc_percent_wind
 col_fun = colorRamp2(quantile(df[[5]], c(0.1, 0.5, 0.9)), c("green", "#FFFFCC", "red"))
 cm = ColorMapping(col_fun = col_fun)
 lgd = color_mapping_legend(cm, title = "GC percent", plot = FALSE,
-    at = c(0, 0.2, 0.4, 0.6, 0.8, 1), 
+    at = c(0, 200, 400, 600, 800, 1), 
     labels = c("0%", "20%", "40%", "60%", "80%", "100%"))
 
 hc = GenomicHilbertCurve(chr = "chr1", level = 6, legend = lgd)
@@ -826,11 +826,14 @@ cat("<p><center><img src='gc_percent_chr1_points.png' /></center></p>\n")
 Or visualize GC percent on chromosome 1, under "pixel" mode (you may see the difference
 between "normal" mode and "pixel" mode here):
 
-```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none"}
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = c(2:4,6:7)}
+png("gc_percent_chr1.png", width = 600, height = 600)
 hc = GenomicHilbertCurve(chr = "chr1", level = 9, mode = "pixel", legend = lgd)
 hc_layer(hc, df, col = col_fun(df[[5]]))
 hc_layer(hc, reduce(g), col = "#00000020")
-hc_png(hc, file = "gc_percent_chr1.png")
+invisible(dev.off())
+# or you can only save the Hilbert curve part as a PNG file
+# hc_png(hc, file = "gc_percent_chr1.png")
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -843,12 +846,15 @@ In following example, only the first half part of chromosome 1 is used to initia
 
 **Note: when using `background`, one chromosome can only exist in one row.**
 
-```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none"}
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = c(2:5,7:8)}
+png("gc_percent_half_chr1.png", width = 600, height = 600)
 background = GRanges(seqnames = "chr1", ranges = IRanges(1, ceiling(chr1_len/2)))
 hc = GenomicHilbertCurve(background = background, level = 9, mode = "pixel", legend = lgd)
 hc_layer(hc, df, col = col_fun(df[[5]]))
 hc_layer(hc, reduce(g), col = "#00000020")
-hc_png(hc, file = "gc_percent_half_chr1.png")
+invisible(dev.off())
+# or you can only save the Hilbert curve part as a PNG file
+# hc_png(hc, file = "gc_percent_half_chr1.png")
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -891,7 +897,8 @@ plot_histone_mark = function(mark) {
         title = qq("Intensity of @{mark} mark on chr1"), legend = list(lgd, lgd2))
 	hc_layer(hc, df, col = col_fun(df[[5]]))
     hc_layer(hc, reduce(g), col = "#00000010")
-    hc_png(hc, qq("@{mark}_chr1.png"))
+    # or you can only save the Hilbert curve part as a PNG file
+    # hc_png(hc, qq("@{mark}_chr1.png"))
 }
 ```
 
@@ -902,8 +909,11 @@ visualize the correspondance between histone modifications and gene bodies.
 
 H3K27ac is a mark for active enhancers which is narrow and sharp. The Hilbert curve shows this attributes and also 
 shows enhancers may exist in form of clusters.
-```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 1}
+
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 2}
+png("H3K27ac_chr1.png", width = 600, height = 600)
 plot_histone_mark("H3K27ac")
+invisible(dev.off())
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -913,8 +923,10 @@ cat("<p><center><img src='H3K27ac_chr1.png' /></center></p>\n")
 H3K36me3 is a mark for actively transcribed gene bodies. The Hilbert curve shows that
 basically most of H3K36me3 modification with high intensity exists in gene bodies (the purple regions).
 
-```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 1}
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 2}
+png("H3K36me3_chr1.png", width = 600, height = 600)
 plot_histone_mark("H3K36me3")
+invisible(dev.off())
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -924,8 +936,10 @@ cat("<p><center><img src='H3K36me3_chr1.png' /></center></p>\n")
 H3K4me3 is a mark for TSS of actively transcribed genes which is also narrow and sharp. The Hilbert curve confirms this
 and also shows the size of marks are quite consistent.
 
-```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 1}
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 2}
+png("H3K4me3_chr1.png", width = 600, height = 600)
 plot_histone_mark("H3K4me3")
+invisible(dev.off())
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -935,8 +949,10 @@ cat("<p><center><img src='H3K4me3_chr1.png' /></center></p>\n")
 H3K9me3 is a mark for repressed genes. The Hilbert curve shows that H3K9me3 modications spread
 over huge regions in the chromosome.
 
-```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 1}
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", fig.keep = "none", echo = 2}
+png("HH3K9me3_chr1.png", width = 600, height = 600)
 plot_histone_mark("H3K9me3")
+invisible(dev.off())
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -958,6 +974,7 @@ lgd = color_mapping_legend(cm, title = "Intensity", plot = FALSE)
 cm2 = ColorMapping(level = c("H3K36me3", "overlap", "gene"), color = c("#FF0000", "purple", "#CCCCCC"))
 lgd2 = color_mapping_legend(cm2, title = "Layer", plot = FALSE)
 
+png("H3K36me3_chr1_overlap.png", width = 600, height = 600)
 hc = GenomicHilbertCurve(chr = "chr1", level = 9, mode = "pixel",
     title = "Intensity of H3K36me3 mark on chr1", legend = list(lgd, lgd2))
 hc_layer(hc, df, col = col_fun(df[[5]]))
@@ -973,7 +990,9 @@ hc_layer(hc, reduce(g), col = "#00000010",
 
         default_overlay(r0, g0, b0, r, g, b, alpha)
     })
-hc_png(hc, "H3K36me3_chr1_overlap.png")
+invisible(dev.off())
+# or you can only save the Hilbert curve part as a PNG file
+# hc_png(hc, "H3K36me3_chr1_overlap.png")
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -996,11 +1015,13 @@ df = read.table(pipe("awk '$1==\"chr1\"' ~/HilbertCurveTest/UCSD.Lung.Bisulfite-
 col_fun = colorRamp2(c(0, 0.5, 1), c("blue", "white", "red"))
 cm = ColorMapping(col_fun = col_fun)
 lgd = color_mapping_legend(cm, title = "Methylation", plot = FALSE)
-
+png("methylation_chr1.png", width = 600, height = 600)
 hc = GenomicHilbertCurve(chr = "chr1", level = 9, mode = "pixel", legend = lgd)
 hc_layer(hc, df, col = col_fun(df[[5]]), mean_mode = "absolute")
 hc_layer(hc, reduce(g), col = "#00000010")
-hc_png(hc, file = 'methylation_chr1.png')
+invisible(dev.off())
+# or you can only save the Hilbert curve part as a PNG file
+# hc_png(hc, file = 'methylation_chr1.png')
 ```
 
 ```{r, echo = FALSE, results = "asis"}
